[gd_scene load_steps=2 format=3 uid="uid://k6rrmtux4k47"]

[ext_resource type="Script" path="res://tests/functional/SGArea2D/GetOverlappingShapeCollisions.gd" id="1"]

[node name="GetOverlappingShapeCollisions" type="Node2D"]
script = ExtResource("1")

[node name="DetectorArea1" type="SGArea2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
position = Vector2(381.637, 287.35)
fixed_position_x = 25010968
fixed_position_y = 18831790
collision_layer = 0
monitorable = false
script = null

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="DetectorArea1"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="DetectorArea2" type="SGArea2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
position = Vector2(534.292, 385.004)
fixed_position_x = 35015352
fixed_position_y = 25231654
collision_layer = 0
monitorable = false
script = null

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="DetectorArea2"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="CollidingArea" type="SGArea2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
position = Vector2(534.292, 249.187)
fixed_position_x = 35015356
fixed_position_y = 16330691
collision_mask = 0
script = null

[node name="Shape1" type="SGCollisionShape2D" parent="CollidingArea"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
position = Vector2(-37.0413, -1.12247)
fixed_position_x = -2427536
fixed_position_y = -73562
script = null

[node name="Shape2" type="SGCollisionShape2D" parent="CollidingArea"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
position = Vector2(-8.97968, 51.6333)
fixed_position_x = -588492
fixed_position_y = 3383837
script = null

[node name="CollidingBody" type="SGStaticBody2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
position = Vector2(534.292, 249.187)
fixed_position_x = 35015356
fixed_position_y = 16330691
collision_mask = 0
script = null

[node name="Shape1" type="SGCollisionShape2D" parent="CollidingBody"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
position = Vector2(-37.0413, -1.12247)
fixed_position_x = -2427536
fixed_position_y = -73562
script = null

[node name="Shape2" type="SGCollisionShape2D" parent="CollidingBody"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
position = Vector2(-8.97968, 51.6333)
fixed_position_x = -588492
fixed_position_y = 3383837
script = null
